--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
       flex-direction: column;
       height: 100vh;
     }
-    textarea {
+    /* Make response area flex to fill available space */
+    #response {
+      padding: 1em;
+      border-bottom: 1px solid #ddd;
+      overflow-y: auto;
+      background: #fafafa;
       flex: 1;
+    }
+    /* Give textarea a fixed, smaller height */
+    textarea {
       width: 100%;
+      height: 20vh;          /* small input area */
       padding: 1em;
       box-sizing: border-box;
       font-size: 1rem;
@@ -32,51 +41,21 @@
       font-size: 1rem;
       cursor: pointer;
     }
-    #response {
-      padding: 1em;
-      border-top: 1px solid #ddd;
-      height: 20vh;
-      overflow-y: auto;
-      background: #fafafa;
-    }
   </style>
 </head>
 <body>
- 
-  <!-- Large scrollable text area -->
+
+  <!-- Expanded response area at top -->
+  <div id="response">Your response will show up here.</div>
+
+  <!-- Smaller reflection textarea below -->
   <textarea id="reflection" placeholder="Type your reflection here…"></textarea>
- 
+
   <!-- Send button -->
   <div id="controls">
     <button id="send">Send</button>
   </div>
- 
-  <!-- Placeholder for response -->
-  <div id="response">Your response will show up here.</div>
- 
-  <script>
-    document.getElementById('send').addEventListener('click', () => {
-      const input = document.getElementById('reflection').value.trim();
-      if (!input) return alert('Please type something first!');
-      
-      // For now, just echo it back:
-      document.getElementById('response').textContent = input;
-      
-      // ↓ Later, swap this out for a fetch() to your GPT endpoint:
-      /*
-      fetch('https://your.api/reflect', {
-        method: 'POST',
-        headers: {'Content-Type':'application/json'},
-        body: JSON.stringify({text: input})
-      })
-      .then(r => r.json())
-      .then(data => {
-        document.getElementById('response').textContent = data.reply;
-      });
-      */
-    });
-  </script>
- 
+
+  <script src="neurogen.js"></script>
 </body>
 </html>
- 
